--- a/index.css
+++ b/index.css
@@ -40,10 +40,12 @@ main{
 
 /* header */
 
+header{
+    background-image: linear-gradient(#000000, #000000cc, #000000bf, #00000096, #00000059, #00000000);
+}
 .main_hdr{
     display: flex;
     width: 100%;
-    background-image: linear-gradient(#000000, #000000cc, #000000bf, #00000096, #00000059, #00000000);
 }
 .logo {
     width: 18%;
@@ -240,6 +242,7 @@ nav ul li a:hover{
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
+    padding-bottom: 160px;
 }
 .scl_fl{
     display: flex;
@@ -265,7 +268,8 @@ nav ul li a:hover{
 
 footer{
     background-color: rgb(32, 22, 22);
-    padding-top: 40px;
+    padding-top: 80px;
+    position: relative;
 }
 .main_footer{
     padding: 30px 0;
@@ -291,5 +295,57 @@ footer{
 .cp_footer p{
     font-size: 1em;
     color: rgb(238, 228, 228);
+}
+.contact{
+    background-color: #fb5200;
+    display: flex;
+    padding: 20px 50px;
+    border-radius: 20px;
+    position: absolute;
+    top: -80px;
+    left: 110px;
+}
+.cntc_frm{
+    width: 50%;
+}
+.cntc_frm p{
+    color: #fff;
+    text-transform: capitalize;
+    text-align: left;
+    font-size: 1em;
+    margin-bottom: 30px;
+}
+.cntc_frm label{
+    font-weight: 700;
+    color: rgb(83, 4, 4);
+}
+.cntc_frm input{
+    padding: 5px 10px;
+    outline: none;
+    border-radius: 10px;
+}
+.or_cntc_frm{
+    width: 40%;
+    margin-left: 10%;
+}
+.or_cntc_frm p{
+    color: rgb(238, 228, 228);
+    cursor: pointer;
+    transition: .3s;
+}
+.or_cntc_frm p:hover{
+    color: #fff;
+}
+#em{
+    margin-bottom: 10px;
+}
+.or_cntc_frm a{
+    color: rgb(238, 228, 228);
+    font-size: 1.5em;
+    margin: 0 2px;
+    transition: .3s;
+}
+.or_cntc_frm a:hover{
+    color: #fff;
 }
 
