--- a/index.css
+++ b/index.css
@@ -192,7 +192,8 @@ nav ul li a:hover{
     font-size: 1em;
     color: rgb(238, 228, 228);
     text-transform: capitalize;
-    margin: 60px 0;
+    margin-top: 20px;
+    margin-bottom: 80px;
 }
 .all_recipies{
     display: flex;
